formatted numbers and added react styles

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="stylesheet" href="../src/index.css">
+    <script src="jquery-3.3.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -11,12 +12,6 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Pomodoro Clock</title>
   </head>
-  <body>
-<main id="root">
-
-<main>
-  <footer>
-    <p>Made by <a target='_blank' href='https://github.com/natalia-a-doskach'>Natalia Doskach</a>.</p>
-  </footer>
+  <body id="root">
   </body>
 </html>
