--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Pomodoro Clock</title>
   </head>
-  <body id="root">
+  <body>
+  <div id="root"></div>
   </body>
 </html>
